@@ -99,6 +99,21 @@
 #undef UPNP_HAVE_WEBSERVER
 
 
+/** Defined to 1 if the library has been compiled with the SSDP part enabled
+ *  (i.e. configure --enable-ssdp) */
+#undef UPNP_HAVE_SSDP
+
+
+/** Defined to 1 if the library has been compiled with the SOAP part enabled
+ *  (i.e. configure --enable-soap) */
+#undef UPNP_HAVE_SOAP
+
+
+/** Defined to 1 if the library has been compiled with the GENA part enabled
+ *  (i.e. configure --enable-gena) */
+#undef UPNP_HAVE_GENA
+
+
 /** Defined to 1 if the library has been compiled with helper API
  *  (i.e. configure --enable-tools) : <upnp/upnptools.h> file is available */
 #undef UPNP_HAVE_TOOLS
