@@ -883,6 +883,7 @@ int UpnpRegisterRootDevice(
 			"UpnpRegisterRootDevice: No services found for RootDevice\n");
 	}
 
+#if EXCLUDE_GENA == 0
 	/*
 	 * GENA SET UP
 	 */
@@ -902,6 +903,7 @@ int UpnpRegisterRootDevice(
 		UpnpPrintf(UPNP_ALL, API, __FILE__, __LINE__,
 			"\nUpnpRegisterRootDevice: Empty service table\n");
 	}
+#endif /* EXCLUDE_GENA */
 
 	UpnpSdkDeviceRegisteredV4 = 1;
 
@@ -1042,6 +1044,7 @@ int UpnpRegisterRootDevice2(
 			"UpnpRegisterRootDevice2: No services found for RootDevice\n");
 	}
 
+#if EXCLUDE_GENA == 0
 	/*
 	 * GENA SET UP
 	 */
@@ -1061,6 +1064,7 @@ int UpnpRegisterRootDevice2(
 		UpnpPrintf(UPNP_ALL, API, __FILE__, __LINE__,
 			"\nUpnpRegisterRootDevice2: Empty service table\n");
 	}
+#endif /* EXCLUDE_GENA */
 
 	UpnpSdkDeviceRegisteredV4 = 1;
 
@@ -1211,6 +1215,7 @@ int UpnpRegisterRootDevice4(
 			"UpnpRegisterRootDevice4: No services found for RootDevice\n");
 	}
 
+#if EXCLUDE_GENA == 0
 	/*
 	 * GENA SET UP
 	 */
@@ -1230,6 +1235,7 @@ int UpnpRegisterRootDevice4(
 		UpnpPrintf(UPNP_ALL, API, __FILE__, __LINE__,
 			"\nUpnpRegisterRootDevice4: Empty service table\n");
 	}
+#endif /* EXCLUDE_GENA */
 
 	if (AddressFamily == AF_INET) {
 		UpnpSdkDeviceRegisteredV4 = 1;
